card styles to separate file, fixed height and uneven animation

--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -1,57 +1,52 @@
 .card {
   position: relative;
-  height: 0;
-  /* padding in % is % of parents width */
-  padding-bottom: 100%;
+  width: 70px;
+  height: 66px;
   background-color: #191a24;
   border-bottom: 4px solid #191a24;
   overflow: hidden;
+  box-sizing: content-box;
 }
 
 .half {
   position: absolute;
   width: 100%;
   height: 50%;
-  transform-origin: center bottom;
+  transform-origin: center bottom 0;
+  transform-style: preserve-3d;
   overflow: hidden;
+  z-index: 15;
 }
+
 .half.top {
   background-color: #2c2c44;
   color: #d54f6b;
 }
+
 .half.bottom {
   background-color: #343650;
   color: #fb6087;
 }
-.half.top.current {
-  border-top: 1px solid #201d2a;
-  z-index: 15;
-}
 
 .half.bottom.current {
   bottom: 0;
-  z-index: 15;
-}
-.half.top.next {
-  border-top: 1px solid transparent;
-  z-index: 14;
 }
 
 .half.bottom.next {
   bottom: 50%;
   transform: rotateX(-90deg);
-  z-index: 15;
-  border-top: 1px solid transparent;
 }
 
 .action .half.top.current {
   transform: rotateX(90deg);
   transition: all 480ms ease-in;
+  background-color: #343650;
   color: #fb6087;
 }
+
 .action .half.bottom.next {
   animation: waitAndDrop 500ms ease-out 480ms forwards;
-  border-top: 1px solid #201d2a;
+  background-color: #343650;
 }
 
 @keyframes waitAndDrop {
@@ -72,6 +67,7 @@
   height: 200%;
   font-size: 21px;
 }
+
 .half.current.bottom .time {
   bottom: 0;
 }
@@ -85,7 +81,6 @@
   font-size: 1.3em;
 }
 
-/* 'days', 'hours', 'minutes', 'seconds' */
 .card-title {
   margin-top: 0.5rem;
   color: #8486a9;
@@ -120,17 +115,17 @@
 @media screen and (min-width: 320px) {
   .time {
     font-size: 2.2rem;
-    /* font-size: 31px; */
   }
 
   .time.fit {
     font-size: 2em;
-    font-size: 28px;
   }
 }
 @media screen and (min-width: 756px) and (min-height: 420px) {
   .card {
     border-bottom-width: 8px;
+    width: 140px;
+    height: 132px;
   }
 
   .card-title {
@@ -151,6 +146,8 @@
 @media screen and (min-width: 1500px) {
   .card {
     border-bottom-width: 12px;
+    width: 223px;
+    height: 211px;
   }
 
   .time {
