--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,14 +1,17 @@
 .minimum-whole-screen {
   width: 100%;
+  min-height: 100svh;
   min-height: 100vh;
 }
 
 .main {
+  padding-top: 21.3svh;
   padding-top: 21.3vh;
 }
 
 @media screen and (min-width: 756px) {
   .main {
+    padding-top: 17svh;
     padding-top: 17vh;
   }
 }
@@ -17,9 +20,9 @@
   display: flex;
   align-items: flex-center;
   justify-content: center;
+  flex-wrap: wrap;
   width: 100%;
-  /* height: auto; */
-  background-color: yellow;
+  gap: 6px;
 }
 
 @media screen and (min-width: 245px) {
@@ -41,23 +44,5 @@
 @media screen and (min-width: 1500px) {
   .cards-row {
     gap: 48px;
-  }
-}
-
-.cards-column {
-  /* box-sizing: content-box; */
-  width: 25%;
-  max-width: 70px;
-}
-
-@media screen and (min-width: 756px) and (min-height: 420px) {
-  .cards-column {
-    max-width: 148px;
-  }
-}
-
-@media screen and (min-width: 1500px) {
-  .cards-column {
-    max-width: 211px;
   }
 }
